--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <!--Row 2-->
             <div class="row2"> <!--Profile picture and designation-->
-                <img id="profile" src="https://media-exp1.licdn.com/dms/image/C5103AQFjtheoZ4NeFg/profile-displayphoto-shrink_200_200/0?e=1592438400&v=beta&t=5aZdpSYEWCoFckLoT5d3u9w3zzMbEh9fFP_0VtqwTiw">
+                <img id="profile" src="profile.jpeg">
                 <h3 style="font-family: 'Bree Serif', serif; margin-top: -7px;"> Ritesh</h3>
                 <h4 style="font-family: 'Noto Sans KR', sans-serif; margin-top: -10px;">Campus Ambassador at Mounty<br> Fresher,BBA,NSUT</h4>
                 <hr>
@@ -71,6 +71,27 @@
                         <th>Role</th>
                         <th>Starting Date</th>
                         <th>Ending Date</th>
+
+                    </tr>
+                    <tr>
+                        <td>Startup India</td>
+                        <td>Marketing Intern</td>
+                        <td>6th June 2020</td>
+                        <td>Present</td>
+
+                    </tr>
+                    <tr>
+                        <td>Quantel Market Marauders</td>
+                        <td>Marketing Intern</td>
+                        <td>3rd June 2020</td>
+                        <td>Present</td>
+
+                    </tr>
+                    <tr>
+                        <td>Xpert</td>
+                        <td>Social Media Prospecting Intern</td>
+                        <td>15th May 2020</td>
+                        <td>Present</td>
 
                     </tr>
                     <tr>
