--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <!--Row 1-->
             <div class="row1"> <!--Background image-->
-                <img src="https://th.bing.com/th?id=OIP.-bEqCDpQ6pcYduw9OmVjTgEsDH&pid=Api&rs=1" id="bgimage" max-width="1000px">
+                <img src="bg.jpeg" id="bgimage" max-width="1000px">
             </div>
             <!--Row 1-->
 
@@ -17,7 +17,7 @@
             <div class="row2"> <!--Profile picture and designation-->
                 <img id="profile" src="profile.jpeg">
                 <h3 style="font-family: 'Bree Serif', serif; margin-top: -7px;"> Ritesh</h3>
-                <h4 style="font-family: 'Noto Sans KR', sans-serif; margin-top: -10px;">Campus Ambassador at Mounty<br> Fresher,BBA,NSUT</h4>
+                <h4 style="font-family: 'Noto Sans KR', sans-serif; margin-top: -10px;">Marketing Intern | Social Media Prospecting Intern | Campus Ambassador at Mounty<br> Fresher,BBA,NSUT</h4>
                 <hr>
             </div>
             <!--Row 2-->
